js-i2b2/cells/CRC/assets/QueryGroups.css
/* ... */
.QueryGroup {
    min-width: 20em;
    margin: 1em 2.3em 1em 2.3em;
}

.QueryGroup .topbar {
    width: 100%;
    display: flex;
    white-space: nowrap;
    overflow: hidden;
    box-shadow: none;
    z-index: 1
}

.QueryGroup .topbar .JoinText {
    width: 10em;
    border-radius: 5px 0px 0px 0px;
    -webkit-border-radius: 5px 0px 0px 0px;
    -moz-border-radius: 5px 0px 0px 0px;
    padding-left: 2.0em !important;
}
.QueryGroup .topbar .qgclose {
    border-radius: 0px 5px 0px 0px;
    -webkit-border-radius: 0px 5px 0px 0px;
    -moz-border-radius: 0px 5px 0px 0px;
    padding-left: 4em !important;
}

.QueryGroup .topbar .JoinText,
.QueryGroup .topbar .with,
.QueryGroup .topbar .without,
.QueryGroup .topbar .when,
.QueryGroup .topbar .qgclose {
    display: inline-block;
    padding: 0.5em;
    height: 2.3em;
}

.QueryGroup .topbar .with,
.QueryGroup .topbar .without,
.QueryGroup .topbar .when,
.QueryGroup .topbar .qgclose i {
    cursor: default;
}
.QueryGroup.with .topbar .with,
.QueryGroup.with .topbar .without,
.QueryGroup.with .topbar .when,
.QueryGroup.with .topbar .qgclose i,
.QueryGroup.without .topbar .with,
.QueryGroup.without .topbar .without,
.QueryGroup.without .topbar .when,
.QueryGroup.without .topbar .qgclose i,
.QueryGroup.when .topbar .with,
.QueryGroup.when .topbar .without,
.QueryGroup.when .topbar .when,
.QueryGroup.when .topbar .qgclose i {
    cursor: pointer;
}

.QueryGroup .topbar .JoinText,
.QueryGroup .topbar .with,
.QueryGroup .topbar .without,
.QueryGroup .topbar .when,
.QueryGroup .topbar .qgclose,
.QueryGroup .body .leftbar {
    transition: background-color 0.3s ease;
}
.QueryGroup.when .SequenceBar,
.QueryGroup.when .topbar .JoinText,
.QueryGroup.when .topbar .with,
.QueryGroup.when .topbar .without,
.QueryGroup.when .topbar .when,
.QueryGroup.when .topbar .qgclose,
.QueryGroup.when .body .leftbar {
    background: #d8a407;
}
.QueryGroup.without .SequenceBar,
.QueryGroup.without .topbar .JoinText,
.QueryGroup.without .topbar .with,
.QueryGroup.without .topbar .without,
.QueryGroup.without .topbar .when,
.QueryGroup.without .topbar .qgclose,
.QueryGroup.without .body .leftbar {
    background: #ad7070;
}
.QueryGroup.with .SequenceBar,
.QueryGroup.with .topbar .JoinText,
.QueryGroup.with .topbar .with,
.QueryGroup.with .topbar .without,
.QueryGroup.with .topbar .when,
.QueryGroup.with .topbar .qgclose,
.QueryGroup.with .body .leftbar {
    background: #7ab893;
}

.QueryGroup.with .body .leftbar,
.QueryGroup.without .body .leftbar,
.QueryGroup.when .body .leftbar{
    display: block;
    border-top: none;
}

.QueryGroup .SequenceBar,
.QueryGroup .topbar .JoinText,
.QueryGroup .topbar .with,
.QueryGroup .topbar .without,
.QueryGroup .topbar .when,
.QueryGroup .topbar .qgclose,
.QueryGroup .body .leftbar
{
    border: 1px solid #ececec;
}



.QueryGroup .topbar .qgclose,
.QueryGroup .topbar .with,
.QueryGroup .topbar .without,
.QueryGroup .topbar .when{
    border-left: none;
}

.QueryGroup .topbar .JoinText,
.QueryGroup .topbar .with,
.QueryGroup .topbar .without,
.QueryGroup .topbar .when,
.QueryGroup .body .leftbar{
    border-right: none;
}

.QueryGroup .topbar .JoinText,
.QueryGroup .topbar .with,
.QueryGroup .topbar .without,
.QueryGroup .topbar .when,
.QueryGroup .topbar .qgclose{
    border-bottom: none;
}

.QueryGroup .body .leftbar{
    border-width: 1px 0 1px 1px;
    border-bottom-left-radius: 5px;
    display: none;
}


.QueryGroup.when .DateOccursLbl,
.QueryGroup.when .DateOccursBody {
    display:none;
}
.QueryGroup.when .DateRange1Body,
.QueryGroup.when .DateRange2Body,
.QueryGroup.when .SequenceBar {
    display: flex;
}

.QueryGroup.when .DateRange1Lbl,
.QueryGroup.when .DateRange2Lbl,
.QueryGroup .DateOccursLbl {
    border-radius: 0.3em;
    background: #cccccc;
    border: solid 1px black;
    display: inline-flex;
    padding: 0.5em;
    margin: 0.5em;
    cursor: pointer;
}
.QueryGroup .DateRange1Lbl i.bi,
.QueryGroup .DateRange2Lbl i.bi,
.QueryGroup .DateOccursLbl i.bi {
    margin-left: 0.5em;
}


.QueryGroup.when .EventLbl {
    max-height: 2em;
}

.QueryGroup.when .Event1Container,
.QueryGroup.when .Event2Container {
    max-height: 30em;
    padding-bottom: 1em;
}
.QueryGroup .SequenceBar {
    transition: max-height 0.75s cubic-bezier(0.075, 0.82, 0.165, 1), background-color 0.3s ease;
    max-height: 0;
    overflow: hidden;
    white-space: nowrap;
}

.QueryGroup .EventLbl,
.QueryGroup .Event2Container {
    max-height: 0;
    transition: max-height 0.75s cubic-bezier(0.075, 0.82, 0.165, 1);
    overflow: hidden;
}

.QueryGroup .Event1Container {
    border-bottom: none;
}
.QueryGroup .Event1Container .EventLbl {
    position: relative;
    top: -1px;
}


.QueryGroup.when .SequenceBar {
    max-height: 2.3em;
    padding: 0.4em;
}

.QueryGroup.when .SequenceBar select.occurs {
    width: 8.5em;
}
.QueryGroup.when .SequenceBar select,
.QueryGroup.when .SequenceBar input {
    border-top: 0px;
    border-right: 0px;
    border-left: 0px;
    border-bottom: solid 1px black;
    background: none;
}
.QueryGroup.when .SequenceBar select {
    cursor: pointer;
}


.occursBefore,
.occursAtLeast {
    display: none;
}
.QueryGroup.when .SequenceBar.occursBefore span.occursBefore {
    display: inline;
}
.QueryGroup.when .SequenceBar.occursAtLeast span.occursAtLeast {
    display: inline;
}
.QueryGroup.when .SequenceBar .occursNumber {
    width: 2em;
    position: relative;
    top: -0.15em;
    text-align: center;
}




.DateRange1Lbl,
.DateRange1Body {
    display: none;
}

.EventLbl {
    background: #e6e6e6;
    height: 2em;
    width: 100%;
    text-align: right;
}

.QueryGroup .body {
    display: flex;
    clear: both;
    /*box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);*/
}


.QueryGroup:hover .body{
    box-shadow: 0 5px 20px rgb(0 0 0 / 19%), 0 6px 6px rgb(0 0 0 / 23%);
}


.QueryGroup .body .leftbar {
    float: left;
    width: 1.5em;
}
/* ... */

